--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "from citipy import citipy\n",
     "\n",
-    "output_data_file = \"Output_data/cities.csv\"\n",
+    "output_data_file = \"cities.csv\"\n",
     "\n",
     "lat_range = (-90, 90)\n",
     "lng_range = (-180, 180)\n",
